--- a/client/index.html
+++ b/client/index.html
@@ -24,13 +24,14 @@
     <h1>Choose an action.</h1> 
     <div class="character" id="character1">|:)</div>
 
-    <input type="text" id="text1">
-
+  
     <button id="wsButton" type="button" title="Open WebSocket connection">
       Open WebSocket connection
     </button>
-    <button id="wsSendButton" type="button" title="Send WebSocket message">
-      Send WebSocket message
+    <input type="text" id="text1" value="Player1">
+
+    <button id="wsSendButton" type="button" title="Update Player Name">
+      Update Player Name
     </button><br>
     <button id="leftArrow" type="button" title="Move Left">
       <-
