--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
       <title>Simple Game Websocket Example</title>
   </head>
   <body>
-    <link href="style.css?asdfasd=sadf" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <div class="header">
       <h1>Welcome to the Game! 
         <a target="_blank" href="https://github.com/planethacktv/websocket">Github</a>
@@ -44,6 +44,7 @@
 
 
     <pre id="messages" style="height: 400px; overflow: scroll"></pre>
-    <script src="client.js?asdfasfd=asdsadf"></script>
+    <script src="md5.js"></script>
+    <script src="client.js"></script>
   </body>
 </html>
