a/b buttons teleporting for a and b buttons!

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,9 @@
       <button id="wsSendButton" type="button" title="Update Player Name">
         Update Player Name
       </button>
+      <button id="logout" type="button" title="Logout">
+       Exit
+      </button>
     </div>
 
     <div class="game" id="gameField">
@@ -39,6 +42,13 @@
       
       <button id="rightArrow" type="button" title="Move Right">
         >
+      </button>
+
+      <button id="aButton" type="button" title="Teleport Random">
+        A
+      </button>
+      <button id="bButton" type="button" title="Teleport Back">
+        B
       </button>
     </div>
 
