--- a/client/index.html
+++ b/client/index.html
@@ -53,7 +53,8 @@
     </div>
 
 
-    <pre id="messages" style="height: 400px; overflow: scroll"></pre>
+    <pre id="messages"></pre>
+    <pre id="playerList"></pre>
     <script src="md5.js"></script>
     <script src="client.js"></script>
   </body>
