abstracting the player code

--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
     <pre id="messages"></pre>
     <pre id="playerList"></pre>
     <script src="md5.js"></script>
-    <script src="client.js"></script>
+    <script  src="character.js"></script>
+    <script  src="client.js"></script>
   </body>
 </html>
